Fix for bug 182842. major perf regression (O(N^2)) in bookmark writing (closing windows) r=darin, sr=jag, a=dbaron